--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
           sudo apt-get install g++-4.9
         fi
         if [ "$COLLECT_COVERAGE" == "true" ]; then
+          export GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
+          export PATH="$PATH:$GEM_HOME/bin"
           sudo gem install --user coveralls-lcov
         fi
       env:
