--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
           # export GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
           # export PATH="$PATH:$GEM_HOME/bin"
           sudo gem install coveralls-lcov
-          echo "PATH=\"$PATH\" GEM_HOME=\"$GEM_HOME\""
-          find $GEM_HOME
+          # echo "PATH=\"$PATH\" GEM_HOME=\"$GEM_HOME\""
+          # find $GEM_HOME
         fi
       env:
         COLLECT_COVERAGE: ${{ format('{0}-{1}-{2}', matrix.node-version, matrix.compiler, matrix.os) == 'node/16-gcc-ubuntu-16.04' }}
@@ -68,6 +68,7 @@ jobs:
         node test/date.js
         find . -iname '*.gcda'
         export GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
+        find $GEM_HOME/bin
         $GEM_HOME/bin/coveralls-lcov test/build/$(node -p "process.config.target_defaults.default_configuration")/coverage.info --repo-token ${{ secrets.COVERALLS_REPO_TOKEN }}
       env:
         COLLECT_COVERAGE: ${{ format('{0}-{1}-{2}', matrix.node-version, matrix.compiler, matrix.os) == 'node/16-gcc-ubuntu-16.04' }}
