--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
         find . -iname '*.gcda'
         export GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
         find $GEM_HOME/bin
-        $GEM_HOME/bin/coveralls-lcov test/build/$(node -p "process.config.target_defaults.default_configuration")/coverage.info --repo-token ${{ secrets.COVERALLS_REPO_TOKEN }}
+        $GEM_HOME/bin/coveralls-lcov test/build/$(node -p "process.config.target_defaults.default_configuration")/coverage.info --repo-token $COVERALLS_REPO_TOKEN
       env:
         COLLECT_COVERAGE: ${{ format('{0}-{1}-{2}', matrix.node-version, matrix.compiler, matrix.os) == 'node/16-gcc-ubuntu-16.04' }}
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
