--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
+    environment: test # for secrets
     timeout-minutes: 30
     strategy:
       matrix:
