finalize ci yamls?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,17 @@ jobs:
     strategy:
       matrix:
         node-version:
-          # - node/10
-          # - node/12
-          # - node/14
-          # - node/15
+          - node/10
+          - node/12
+          - node/14
+          - node/15
           - node/16
         compiler:
           - gcc
-          # - clang
+          - clang
         os:
           - ubuntu-16.04 # ubuntu-18.04/ubuntu-latest missing package g++-4.9
-          # - macos-latest
+          - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -31,12 +31,8 @@ jobs:
           sudo apt-get install g++-4.9
         fi
         if [ "$COLLECT_COVERAGE" == "true" ]; then
-          # export GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
-          # export PATH="$PATH:$GEM_HOME/bin"
           gem install --user coveralls-lcov
           sudo apt-get install -y lcov
-          # echo "PATH=\"$PATH\" GEM_HOME=\"$GEM_HOME\""
-          # find $GEM_HOME
         fi
       env:
         COLLECT_COVERAGE: ${{ format('{0}-{1}-{2}', matrix.node-version, matrix.compiler, matrix.os) == 'node/16-gcc-ubuntu-16.04' }}
@@ -61,9 +57,10 @@ jobs:
         if [ "${{ matrix.compiler }}" = "clang" ]; then
           export CC="clang" CXX="clang++"
         fi
-        export CFLAGS="$CFLAGS -O3" CXXFLAGS="$CXXFLAGS -O3"
         if [ "$COLLECT_COVERAGE" == "true" ]; then
-          export CFLAGS="$CFLAGS --coverage" CXXFLAGS="$CXXFLAGS --coverage" LDFLAGS="$LDFLAGS --coverage"
+          export CFLAGS="$CFLAGS -O0 --coverage" CXXFLAGS="$CXXFLAGS -O0 --coverage" LDFLAGS="$LDFLAGS --coverage"
+        else
+          export CFLAGS="$CFLAGS -O3" CXXFLAGS="$CXXFLAGS -O3"
         fi
         echo "CFLAGS=\"$CFLAGS\" CXXFLAGS=\"$CXXFLAGS\" LDFLAGS=\"$LDFLAGS\""
         npm run pretest -- --verbose
