--- a/package.json
+++ b/package.json
@@ -353,7 +353,7 @@
     "prebenchmark": "node-gyp rebuild -C benchmark",
     "benchmark": "node benchmark",
     "pretest": "node-gyp rebuild -C test",
-    "test": "node test/date.js",
+    "test": "node test",
     "predev": "node-gyp rebuild -C test --debug",
     "dev": "node test",
     "predev:incremental": "node-gyp configure build -C test --debug",
