--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         fi
         echo "CFLAGS=\"$CFLAGS\" CXXFLAGS=\"$CXXFLAGS\" LDFLAGS=\"$LDFLAGS\""
         npm run pretest -- --verbose
-        node test/date.js
+        node test
       env:
         COLLECT_COVERAGE: ${{ format('{0}-{1}-{2}', matrix.node-version, matrix.compiler, matrix.os) == 'node/16-gcc-ubuntu-16.04' }}
     - name: Upload coverage
@@ -73,7 +73,7 @@ jobs:
         BUILD_TYPE=$(node -p "process.config.target_defaults.default_configuration")
         GEM_HOME="$(ruby -e 'puts Gem.user_dir')"
         lcov --capture --directory test/build/$BUILD_TYPE/obj.target/ --output-file test/build/$BUILD_TYPE/coverage.info
-        lcov --remove test/build/$BUILD_TYPE/coverage.info '/usr/include/*' 'test/*' -o test/build/$BUILD_TYPE/coverage-filtered.info
+        # lcov --remove test/build/$BUILD_TYPE/coverage.info '/usr/include/*' 'test/*' -o test/build/$BUILD_TYPE/coverage-filtered.info
         $GEM_HOME/bin/coveralls-lcov test/build/$BUILD_TYPE/coverage-filtered.info --repo-token $COVERALLS_REPO_TOKEN
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
